mobile version improved

--- a/index.html
+++ b/index.html
@@ -102,7 +102,12 @@
         
         <section id="spotlight">
             <h3>Spotlight</h3>
-            <img src="./assets/img/spotlight.gif" alt="spotlight main image">
+            <div class="left">
+                <img src="./assets/img/spotlight-left.gif" alt="spotlight main image">
+            </div>
+            <div class="right">
+                <img src="./assets/img/spotlight-right.gif" alt="spotlight main image">
+            </div>
         </section>
         
         <section id="characters">
